# petri

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.sh  当前阶段.md  蓝图.md  项目架构.md
snapshots/memory/: chroma.sqlite3
src/agents/: cognitive.py
src/api/: main.py
src/core/: agent_config.py  logger.py
src/core/engine/: __init__.py  brain_manager.py  engine.py  event_broadcaster.py  memory_integrator.py  state_manager.py
src/core/initialization/: __init__.py
src/core/initialization/agents/: __init__.py
src/core/initialization/items/: __init__.py
src/core/initialization/markets/: __init__.py  config.py
src/core/initialization/spaces/: __init__.py
src/core/rule_engine/: __init__.py  engine.py  models.py
src/core/rule_engine/actions/: attack.py  eat.py  move.py  pickup.py  trade.py
src/core/world_state/: __init__.py  actions.py  agents.py  enums.py  items.py  market.py  nodes.py  world.py
src/llm/: brain.py  model_manager.py
src/memory/: memory_manager.py  memory_store.py
tests/: test_economy.py  test_judge.py  test_model_manager.py  test_new_locations.py  test_omlx_think.py  test_optimized_model_manager.py  test_pickup.py
